--- a/client/layouts/root.ng.html
+++ b/client/layouts/root.ng.html
@@ -1,6 +1,6 @@
 <header id="header">
 	<div id="logo-group">
-		<span id="logo" style="margin-top: 0px !important;"> <img ng-if="ro.seccion.logo != undefined" ng-src="{{ro.seccion.logo}}" style="width: 110px;" alt="Escuelas"> </span>
+		<span id="logo" style="margin-top: 0px !important;"> <img ng-if="ro.seccion.logo != undefined" ng-src="{{ro.seccion.logo}}" style="width: 40px;" alt="Escuelas"> </span>
 		<!-- Pánel de mensajes para directores -->
 		<div ng-if="ro.usuarioActual.roles[0] == 'director'">
 			<div ng-include="'client/layouts/avisosDirector.html'"></div>
@@ -14,10 +14,44 @@
 		
 	
   <div class="pull-right">
+	  
+	  <ul id="mobile-profile-img" class="header-dropdown-list hidden-xs padding-5">
+			<li class="">
+				<a href="#" class="dropdown-toggle no-margin userdropdown" data-toggle="dropdown" aria-expanded="false"> 
+					<img src="{{ro.tieneFoto(currentUser.profile.sexo, currentUser.profile.foto)}}" alt="{{currentUser.profile.nombreCompleto}}" class="online">  
+				</a>
+				<ul class="dropdown-menu pull-right">
+					<li>
+						<a href="javascript:void(0);" class="padding-10 padding-top-0 padding-bottom-0"><i class="fa fa-user"></i> {{currentUser.profile.nombreCompleto}}</a>
+					</li>
+					<li class="divider"></li>
+					<li>
+						<a href="javascript:void(0);" ui-sref="root.cambiarSeccion" class="padding-10 padding-top-0 padding-bottom-0" ><i class="fa fa-building"></i> Cambiar <u>E</u>scuela</a>
+					</li>
+					<li class="divider"></li>
+					<li>
+						<a full-screen href="javascript:void(0);" class="padding-10 padding-top-0 padding-bottom-0" data-action="launchFullscreen"><i class="fa fa-arrows-alt"></i> Pantalla <u>C</u>ompleta</a>
+					</li>
+					<li class="divider"></li>
+					<li>
+						<a ui-sref="anon.logout" href="#" class="padding-10 padding-top-5 padding-bottom-5" data-action="userLogout"><i class="fa fa-sign-{{ro.isLoggedIn() ? 'out' : 'in'}}"></i> <strong><u>C</u>errar Sesión</strong></a>
+					</li>
+				</ul>
+			</li>
+		</ul>
+		
     <div id="hide-menu" class="btn-header pull-right">
       <span>
         <a toggle-menu title="Collapse Menu">
           <i class="fa fa-reorder"></i>
+        </a>
+      </span>
+    </div>
+    
+    <div class="btn-header pull-right" ng-if="currentUser.roles != ['alumno'] || currentUser.roles != ['maestro']">
+      <span>
+        <a ui-sref="root.cambiarSeccion" title="Cambiar Sección">
+          <i class="fa fa-building"></i>
         </a>
       </span>
     </div>
@@ -40,7 +74,7 @@
   </div>
 </header>
 
-<aside id="left-panel">
+<aside id="left-panel" style="background-color: yellow;">
   <div class="login-info">
 		<span ng-if="ro.usuarioActual._id">
 			<a href="javascript:void(0);" id="show-shortcut" data-action="toggleShortcut">
